<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="190dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    android:layout_marginVertical="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        >
        <ImageView
            android:id="@+id/img_Item_Product_Gr"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/background_item_product"
            android:src="@drawable/plant" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_PlantName_Gr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_Name"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_PlantType_Gr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_Type"
        android:textColor="@color/color_Plant_Type"
        android:fontFamily="@font/lato"
        android:textSize="14sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_PlantPrice_Gr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/plant_Price"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

</LinearLayout>