<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="77dp"
            android:layout_height="77dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/img_Search_Product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_item_product"
                android:src="@drawable/plant" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Search_PlantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/plant_Name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Search_PlantType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/plant_Type"
                android:textColor="@color/color_Plant_Type"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_Search_PlantPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato"
                android:text="@string/plant_Price"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>